Fix alignment of submenu for Internet Explorer. Fixes #3932

--- a/web/pgadmin/misc/file_manager/static/scss/_file_manager.scss
+++ b/web/pgadmin/misc/file_manager/static/scss/_file_manager.scss
@@ -7,7 +7,7 @@
   min-width: 100%;
 
   .file_listing_table_no_data {
-    height: unset !important;
+    height: auto !important;
   }
 
   .file_listing_table {
