--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -868,7 +868,7 @@ table.table-empty-rows{
   font-family: $font-family-icon;
   content: "\f054" !important;
   right: 15px;
-  top: unset;
+  top: auto;
   font-size: 0.6rem;
   line-height: 2;
   border-style: none;
