--- a/web/pgadmin/static/scss/_webcabin.pgadmin.scss
+++ b/web/pgadmin/static/scss/_webcabin.pgadmin.scss
@@ -310,7 +310,7 @@
   font-family: 'FontAwesome';
   content: "\f054" !important;
   right: 15px;
-  top: unset;
+  top: auto;
   font-size: 0.6rem;
   line-height: 2;
   border-style: none;
